RESOLVED FIXED129594
[iOS WebKit2] Keyboard deadlock when accepting/dismissing autocorrection
https://bugs.webkit.org/show_bug.cgi?id=129594
Summary [iOS WebKit2] Keyboard deadlock when accepting/dismissing autocorrection
Enrica Casucci
Reported 2014-03-02 17:42:02 PST
The keyboard code locks the main thread in some circumstance when it wants to flush the task queue. Having the main thread locked prevents us from receiving the response from the WebProcess. this happens typically when the autocorrection bubble is visible and the keybaord is dismissed or the focus changed to another field. <rdar://problem/16053643>
Attachments
Patch (8.89 KB, patch)
2014-03-02 17:46 PST, Enrica Casucci
sam: review+
Enrica Casucci
Comment 1 2014-03-02 17:46:50 PST
Enrica Casucci
Comment 2 2014-03-02 18:01:59 PST
Committed revision 164963.
Note You need to log in before you can comment on or make changes to this bug.